force-app/main/default/objects/Lead/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <description>Tags used to determine contact type. Primarily for list segmentation.</description>
    <label>Contact Type</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CYTK_Contact_Type</valueSetName>
    </valueSet>
</CustomField>