force-app/main/default/objects/Lead/fields/CYTK_Activation_Token__c.field-meta.xml
<CustomField>
    <fullName>CYTK_Activation_Token__c</fullName>
    <description>The temporary activation token used in the activation email</description>
    <label>CYTK Activation Token</label>
    <length>40</length>
    <type>Text</type>
</CustomField>