force-app/main/default/objects/Lead/fields/CYTK_Active__c.field-meta.xml
<CustomField>
    <fullName>CYTK_Active__c</fullName>
    <description>Whether or not a user is an active CYTK user</description>
    <label>CYTK Active</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CYTK_Active</valueSetName>
    </valueSet>
</CustomField>