force-app/main/default/objects/Lead/fields/CYTK_Shop_Id__c.field-meta.xml
<CustomField>
    <fullName>CYTK_Shop_Id__c</fullName>
    <description>Repair Shop Id from CYTK Middleware</description>
    <label>CYTK Shop Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>