force-app/main/default/objects/Lead/fields/CYTK_User_Id__c.field-meta.xml
<CustomField>
    <fullName>CYTK_User_Id__c</fullName>
    <description>The UserID in CYTK</description>
    <label>CYTK User Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>