force-app/main/default/objects/Lead/fields/Job_Role__c.field-meta.xml
<CustomField>
    <fullName>Job_Role__c</fullName>
    <description>General role of the user in the shop</description>
    <label>Job Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Job_Role</valueSetName>
    </valueSet>
</CustomField>