force-app/main/default/objects/Lead/fields/Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Launch_Date__c</fullName>
    <description>Date user was onboarded in CYTK</description>
    <label>Launch Date</label>
    <type>Date</type>
</CustomField>