force-app/main/default/objects/Lead/fields/leadHash__c.field-meta.xml
<CustomField>
    <fullName>leadHash__c</fullName>
    <description>Automation</description>
    <inlineHelpText>Automation</inlineHelpText>
    <label>leadHash</label>
    <length>40</length>
    <type>Text</type>
</CustomField>