force-app/main/default/objects/Lead/fields/OriginalLead__c.field-meta.xml
<CustomField>
    <fullName>OriginalLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Automation</description>
    <inlineHelpText>Automation</inlineHelpText>
    <label>OriginalLead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Leads (OriginalLead)</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>