force-app/main/default/objects/Lead/fields/Parent_Lead__c.field-meta.xml
<CustomField>
    <fullName>Parent_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The parent lead, which will be the shop lead with the admin user captured. Workers must have a parent lead.</description>
    <inlineHelpText>Enter the parent lead, if this is a worker lead.</inlineHelpText>
    <label>Parent Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Worker Leads</relationshipLabel>
    <relationshipName>Worker_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>