force-app/main/default/objects/Lead/fields/Potential_CYTK_Users__c.field-meta.xml
<CustomField>
    <fullName>Potential_CYTK_Users__c</fullName>
    <description>Number of potential CYTK users. This filed is intended to help dimension the CYTK opportunity</description>
    <inlineHelpText>How many potential users does this prospect bring?</inlineHelpText>
    <label>Potential CYTK Users</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Potential_CYTK_Users</valueSetName>
    </valueSet>
</CustomField>